--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.13.1",
     "haml-coffee": "^1.14.1",
     "pagedown": "^1.1.0",
+    "pagedown-extra": "git+https://github.com/jmcmanus/pagedown-extra.git",
     "serve-index": "^1.7.1"
   }
 }
